# AgentsOpenRLHF

./: .gitignore  pyproject.toml  requirements.txt
data/frozen_lake/: frozen_lake_train.jsonl  frozen_lake_val.jsonl  rl_train.jsonl  test_debug.jsonl
eval_output/: llama_3.1_8b_instruct_base_hilr_responses.jsonl  llama_3.1_8b_instruct_base_results.json  sft_llama8_finetuned_hilr_responses.jsonl  sft_llama8_finetuned_results.json
openrlhf/cli/: train_ppo_ray.py
openrlhf/trainer/: ppo_trainer.py
openrlhf/trainer/ppo_utils/: experience_maker.py  experience_maker_async.py
openrlhf/utils/: agent.py
scripts/: eval.sh  fl_agent.py  fl_agent_strict.py  fl_agent_tool.py  fl_datagen.py  fl_evaluator.py  frozenlake_model_eval.py  gsm_reward.sh  gym_agent.py  llama_fl_evaluator.py  llama_frozenlake_model_eval.py  run_grpo_flake.sh  run_grpo_gsm.sh  run_sft_qwen.sh  run_sft_qwen01.sh  simulator.py  test_agent.py  test_flash.py
scripts/SFT/: run_sft_llama.sh
scripts/llama_sft/: base_llm_policy.py  run_sft_llama.sh  sft_eval.sh  sft_evaluator.py  sft_llm_policy.py  sft_main.py
