[project]
name = "openrlhf-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.116.0",
    "math-verify>=0.8.0",
    "markupsafe<3.0.0",
    "ninja>=1.11.1.4",
    "torch==2.6.0",
    "openrlhf==0.8.4",
    "packaging<=24.1",
    "ray==2.43.0",
    "setuptools>70.2.0",
    "setuptools",
    "uvicorn>=0.35.0",
    "wheel>=0.45.1",
    "vllm==0.8.5.post1",
    "flash-attn==2.7.4.post1",
    "nvidia-cufile-cu12>=1.14.1.1",
]

